spacing fixes

--- a/app/(pages)/community-partners/page.module.scss
+++ b/app/(pages)/community-partners/page.module.scss
@@ -1,19 +1,23 @@
 @use "@/app/(pages)/_globals/mixins.scss";
 
-.titleText {
-   text-align: center;
-}    
+.page {
+  display: flex; 
+  flex-direction: column; 
+  align-items: center;
+  gap: 100px;
+  padding: 160px 0;
+}
 
-.subtitleText {
-   text-align: center;
+.header {
+  text-align: center;
 }
 
 .partnersGrid {
-  padding: var(--card-padding);
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: var(--vertical-card-gap);
+  border: 1px solid red;
 }
 
 .partnerContainer {
